@@ -1,5 +1,6 @@
 package com.mockops.global.exception;
 
+import jakarta.servlet.http.HttpServletRequest;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -10,7 +11,7 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 @RestControllerAdvice
 public class GlobalExceptionHandler {
     @ExceptionHandler(BusinessException.class)
-    public ResponseEntity<ErrorResponse> handleBusinessException(BusinessException exception) {
+    public ResponseEntity<ErrorResponse> handleBusinessException(BusinessException exception, HttpServletRequest request) {
         ErrorCode errorCode = exception.getErrorCode();
 
         log.error("[{}] {} - {}",
@@ -22,31 +23,31 @@ public class GlobalExceptionHandler {
 
         return ResponseEntity
                 .status(errorCode.getHttpStatus())
-                .body(ErrorResponse.from(errorCode));
+                .body(ErrorResponse.from(errorCode, request.getRequestURI()));
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ErrorResponse> handleValidationException(MethodArgumentNotValidException ex) {
+    public ResponseEntity<ErrorResponse> handleValidationException(MethodArgumentNotValidException ex, HttpServletRequest request) {
         String errorMessage = ex.getBindingResult()
                 .getAllErrors()
-                .get(0)
+                .getFirst()
                 .getDefaultMessage();
 
         log.error("validation 예외: {}", errorMessage, ex);
 
         return ResponseEntity
                 .status(400)
-                .body(ErrorResponse.of(ErrorCode.BAD_REQUEST, errorMessage));
+                .body(ErrorResponse.of(ErrorCode.BAD_REQUEST, errorMessage, request.getRequestURI()));
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<ErrorResponse> handleUnexpectedException(Exception ex) {
+    public ResponseEntity<ErrorResponse> handleUnexpectedException(Exception ex, HttpServletRequest request) {
         ErrorCode errorCode = ErrorCode.INTERNAL_SERVER_ERROR;
 
         log.error("예상하지 못한 에러 발생: {}", ex.getMessage(), ex);
 
         return ResponseEntity
                 .status(errorCode.getHttpStatus())
-                .body(ErrorResponse.from(errorCode));
+                .body(ErrorResponse.from(errorCode, request.getRequestURI()));
     }
 }
